<resources>
    <string name="app_name">单身村</string>
    <string name="mdn">手机号</string>
    <string name="phone_verify">手机号验证</string>
    <string name="receive_verify_num">收取验证码</string>
    <string name="register_text" >注册</string>
    <string name="singlevillage_num">单身村微信号</string>
    <string name="register_notice">为维护单身村的安全，暂不开放注册，只能推荐加入，你可以加入单身村微信号获取推荐</string>
    <string name="forget_passwd">忘记密码？</string>
    <string name="next_step">下一步</string>
    <string name="input_verify">输入验证码</string>
    <string name="again_receive_verify">重新获取验证码</string>
    <string name="register_finish">完成</string>
    <string name="register_name">姓名</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="register_nation">民族</string>
    <string name="register_company">工作单位</string>
    <string name="register_school">毕业学校</string>
    <string name="register_weight">体重</string>
    <string name="register_height">身高</string>
    <string name="register_hometown">家乡</string>
    <string name="register_age">年龄</string>
    <string name="app_display_name">手机QQ2012</string>
    <string name="group_online">在线好友</string>
    <string name="group_stranger">陌生人</string>
    <string name="group_blcak_list">黑名单</string>
    <string name="run_bg_ticker">手机QQ正在后台运行</string>
    <string name="refreshing">正在加载</string>
    <string name="refresh_failed">刷新失败！</string>
    <string name="about">关于</string>
    <string name="failedconnection">网络连接不可用，请检查网络设置</string>
    <string name="failedconnection_info">网络连接不可用，请检查网络设置</string>
    <string name="exit_dialog_title">新消息通知</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="image">[图片]</string>
    <string name="context_title">操作选项</string>
    <string name="del_img">删除图片</string>
    <string name="reupload">重新发送</string>
    <string name="add_friend">添加好友</string>
    <string name="join_troop_title">添加群</string>
    <string name="join_troop">加入该群</string>
    <string name="add_troop_member">添加群成员</string>
    <string name="kick_troop_member">删除群成员</string>
    <string name="manager_string">管理员</string>
    <string name="accept_join_troop">通过了您的加群请求</string>
    <string name="refuse_join_troop">拒绝了您的加群请求</string>
    <string name="apply_join_troop">申请加入群</string>
    <string name="invite_join_troop">邀请您加入群</string>
    <string name="accept_invite_troop">同意加入群</string>
    <string name="refuse_invite_troop">拒绝加入群</string>
    <string name="find">查找</string>
    <string name="troop_memberlist">查看群成员</string>
    <string name="troop_member">群成员</string>
    <string name="troop_member_management">群成员管理</string>
    <string name="select_friends">选择联系人</string>
    <string name="manage_btn">管理</string>
    <string name="kick_out_confirm">确定要将该用户从本群中移除？</string>
    <string name="alert_not_troop_member">您已不是该群成员</string>
    <string name="alert_troop_not_exist">该群已解散</string>
    <string name="friend_already_troop_member">该用户已经是该群成员</string>
    <string name="request_prompt">正在寻找...</string>
    <string name="video_prompt">想视频通话？先互加为好友吧。</string>
    <string name="video_sdk_not_support">系统版本过低无法启用视频通话，请升级系统后再试</string>
    <string name="video_sdk_not_support_msg">对方发来视频请求，由于您的系统版本过低无法建立视频通话</string>
    <string name="system_message">系统消息</string>
    <string name="verify_toast">验证码错误,请重新输入!</string>
    <string name="to_nearby">去看看附近的人</string>
    <string name="login_title">设置QQ帐号</string>
    <string name="account_setting">状态管理</string>
    <string name="account_setting2">帐号设置</string>
    <string name="login">登 录</string>
    <string name="account">输入QQ号码</string>
    <string name="password">输入密码</string>
    <string name="login_prompt">正在验证帐号…</string>
    <string name="timeout_prompt">操作超时！</string>
    <string name="loginFailed">登录失败，请稍后重试</string>
    <string name="netFailed">连网失败，请检查网络</string>
    <string name="gray_title">内测版本</string>
    <string name="gray_prompt">感谢您对手机QQ3.0内测的关注，很抱歉您的账号不在本次测试范围之内，请访问<a href="http://a.myapp.com/g/s?aid=newdetails_a&amp;softId=45592">官方网站</a>下载正式版本使用。</string>
    <string name="net_timeout_check_prompt">连网超时，请检查网络设置！</string>
    <string name="null_account_prompt">请输入QQ号</string>
    <string name="null_search_troop">请输入群号码</string>
    <string name="password_incorrect_prompt">帐号或密码输入有误，请检查后重新输入</string>
    <string name="password_input_prompt">请输入密码</string>
    <string name="verifycode_input_prompt">请输入验证码</string>
    <string name="invalid_account_prompt">帐号不存在，请重新输入</string>
    <string name="clear_account_title">清除帐号</string>
    <string name="clear_account_prompt">确定删除帐号${account}？</string>
    <string name="clear_msg_history">同时删除相关聊天记录？</string>
    <string name="force_logout_title">下线通知</string>
    <string name="force_logout">您的帐号在另一地点登录，您被迫下线了。如果这不是您本人的操作，那么您的密码可能已经泄露，建议您修改密码。</string>
    <string name="force_logout_relogin">重新登录</string>
    <string name="account_not_match">帐号不匹配!请登录</string>
    <string name="account_chage_server">更换Server,输入</string>
    <string name="account_chage_trans_file_server">更换统一传输Server,输入</string>
    <string name="account_ok">确定</string>
    <string name="account_cancel">取消</string>
    <string name="account_reset">重置服务器</string>
    <string name="fetch_verification_code_prompt">" "<u>看不清？换一张</u>" "</string>
    <string name="register" formatted="false">" "<a href="http://pt5.3g.qq.com/reg?sid=ARTg89jxv2xYC8U8VhELPM49&amp;loginurl=http%3A%2F%2Fpt.3g.qq.com%2Fs%3Faid%3DnLoginnew%26q_from%3D3GQQ">注册新帐号</a>" "</string>
    <string name="setallread">全部设为已读</string>
    <string name="register2">注册新帐号</string>
    <string name="auto_save_password">记住密码</string>
    <string name="display_online">显示为在线</string>
    <string name="hide_login">隐身登录</string>
    <string name="silence_login">静音登录</string>
    <string name="delete_recent_all">清空列表</string>
    <string name="set_troopmsg_failed">群设置失败，请重试</string>
    <string name="set_troopmsg_failednet">群设置失败，请检查网络</string>
    <string name="set_status_failed">状态设置失败，请重试</string>
    <string name="set_status_failednet">状态设置失败，请检查网络</string>
    <string name="clear_recent">清空会话列表</string>
    <string name="clear_tip">确认要清空会话列表吗？（相关聊天记录仍会保留）</string>
    <string name="del_friend_failed">删除好友失败，请刷新列表</string>
    <string name="del_friend_failednet">删除好友失败，请检查网络</string>
    <string name="del_friend_suc">已删除该好友</string>
    <string name="tab_title_leba">动态</string>
    <string name="tab_title_group">群组</string>
    <string name="tab_title_friend">好友</string>
    <string name="tab_title_chat">会话</string>
    <string name="send">发表</string>
    <string name="empty_contact_group">empty_contact_group</string>
    <string name="online_count">online_count</string>
    <string name="unknown_contact">unknown_contact</string>
    <string name="empty_conversation_group">empty_conversation_group</string>
    <string name="subscriptions">subscriptions</string>
    <string name="recent">最近联系人</string>
    <string name="friends">好友</string>
    <string name="group">群</string>
    <string name="resend_message_title">重新发送</string>
    <string name="resend_message">该条消息可能发送失败，是否重新发送？</string>
    <string name="chat_send_photo">发送图片</string>
    <string name="nosdcardnosend">未检测到SD卡，发送失败</string>
    <string name="pa_my_qzone">我的空间</string>
    <string name="pa_my_weibo">我的微博</string>
    <string name="pa_ta_qzone">Ta的空间</string>
    <string name="pa_ta_weibo">Ta的微博</string>
    <string name="pa_career">相同经历</string>
    <string name="pa_friend">共同好友</string>
    <string name="pa_school">学校</string>
    <string name="pa_company">公司</string>
    <string name="pa_business">商家介绍</string>
    <string name="pa_introduction">交友宣言</string>
    <string name="pa_signature">个性签名</string>
    <string name="pa_qungonggao">群公告</string>
    <string name="edit_intro_hint">说说我的兴趣爱好，让大家多了解我。</string>
    <string name="edit_signature_hint">编辑我的个性签名</string>
    <string name="edit_beizhu_hint">输入好友备注姓名</string>
    <string name="no_intro">对附近的人说点什么吧</string>
    <string name="ta_shenmi">Ta好神秘，什么都没有留下</string>
    <string name="info_info">我的资料</string>
    <string name="info_sex">性别</string>
    <string name="info_age">年龄</string>
    <string name="info_birthday">生日</string>
    <string name="info_city">城市</string>
    <string name="info_province">省份</string>
    <string name="info_nation">国家</string>
    <string name="info_account">帐号</string>
    <string name="info_signature">签名</string>
    <string name="info_status">状态</string>
    <string name="info_online">在线</string>
    <string name="info_away">离开</string>
    <string name="info_hide">隐身</string>
    <string name="info_qzone">进入空间</string>
    <string name="info_mail">发送邮件</string>
    <string name="info_comment">备注</string>
    <string name="info_change">修改</string>
    <string name="info_add_friend">加为好友</string>
    <string name="info_enter_chat">发起聊天</string>
    <string name="info_troopaccount">群号</string>
    <string name="info_troopintro">群简介</string>
    <string name="hint_troopintro">暂无简介</string>
    <string name="info_troopnews">群公告:</string>
    <string name="hint_troopnews">暂无公告</string>
    <string name="info_troopmessage">接收群消息</string>
    <string name="info_troopnomessage">屏蔽群消息</string>
    <string name="info_accounts">允许手机/电脑同时在线</string>
    <string name="change_comment">修改备注</string>
    <string name="refresh_friendlist">刷新好友列表</string>
    <string name="refresh_trooplist">刷新群列表</string>
    <string name="setting_help">设置与帮助</string>
    <string name="help">帮助</string>
    <string name="setting_notify">通知设置</string>
    <string name="relogin">帐号</string>
    <string name="exit">退出</string>
    <string name="troop_info">群资料</string>
    <string name="friend_info">好友资料</string>
    <string name="user_info">个人名片</string>
    <string name="refresh_nearbylist">刷新列表</string>
    <string name="hide_location">停止上报地理位置</string>
    <string name="refresh_together">刷新列表</string>
    <string name="find_key">找回密码</string>
    <string name="preference1">提醒方式</string>
    <string name="preference1_title1">退出后新消息通知</string>
    <string name="preference1_summary1">程序退出或关机重启后，接收新消息并在系统栏显示</string>
    <string name="preference1_title2">声音</string>
    <string name="preference1_summary2">当有新消息通知时播放声音提示</string>
    <string name="preference1_title3">震动</string>
    <string name="preference1_summary3">当有新消息通知时震动提示</string>
    <string name="preference2">显示</string>
    <string name="preference2_title1">开启横屏模式</string>
    <string name="preference2_summary1">摇晃手机即可截图， QQ外截图需root权限</string>
    <string name="preference2_title2">显示系统栏挂机图标</string>
    <string name="preference2_summary2">后台运行时，在系统栏显示程序图标</string>
    <string name="preference2_title3">更换皮肤</string>
    <string name="preference3">帮助</string>
    <string name="preference3_title0">流量统计</string>
    <string name="preference3_summary0">手机QQ所产生的上行和下行流量</string>
    <string name="preference3_title1">反馈建议</string>
    <string name="preference3_summary1">告诉我们您对手机QQ的意见和建议</string>
    <string name="preference3_title2">关于</string>
    <string name="preference3_summary2">版本、版权与声明</string>
    <string name="preference4">图片接收</string>
    <string name="preference4_title1">自动接收图片</string>
    <string name="preference4_summary1">Gprs和3G自动接收并显示</string>
    <string name="preference2_title4">弱光模式</string>
    <string name="preference2_summary4">切换屏幕明度</string>
    <string name="pref_assistant">辅助功能</string>
    <string name="pref_snap_title">开启截屏功能</string>
    <string name="pref_snap_summary">摇晃手机即可截图（在QQ外截图需root权限）</string>
    <string name="pref_clrloc_title">上报我的地理位置</string>
    <string name="pref_clrloc_summary">上报地理位置信息以便附近的人能够找到我</string>
    <string name="preference_send_msg">发送消息</string>
    <string name="pref_send_msg_on_enter">回车键发送消息</string>
    <string name="sc_password">密码</string>
</resources>