<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_notice_singlevillage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0FFF0"
    android:orientation="vertical">
    
	<TextView
	    android:id="@+id/notice_title"
	    android:layout_width="match_parent"
        android:layout_height="48dp"        
        android:background="@color/green_03"      
        android:text="@string/register_text"
        android:textColor="@color/white"       
        android:gravity="center"
        android:textSize="24.0sp" 
	    />
	<TextView
	    android:id="@+id/weixin_num"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notice_title" 
        android:layout_marginTop="48dp"         
        android:text="@string/singlevillage_num"
        android:textColor="@color/green_03"       
        android:gravity="center"
        android:textSize="19.0sp" 
	    />

	<ImageView
	    android:id="@+id/weixin_code"
	    android:layout_width="108dp"
	    android:layout_height="108dp"
	    android:layout_below="@+id/weixin_num"
	    android:layout_marginTop="8dp" 
	    android:layout_centerHorizontal="true"
	    android:background="@drawable/weixin"
	     />
	<TextView
	    android:id="@+id/notice_text"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/weixin_code" 
        android:layout_marginTop="24dp"   
        android:layout_marginLeft="45dp"
      	android:layout_marginRight="45dp"      
        android:text="@string/register_notice"
        android:textColor="@color/green_03"       
        android:gravity="left"
        android:textSize="14.0sp" 
	    />
	"
   	
	
    


</RelativeLayout>