<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_information_singlevillage" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_02"
    android:orientation="vertical">
    
	<TextView
	    android:id="@+id/title"
	    android:layout_width="match_parent"
        android:layout_height="48dp"        
        android:background="@color/green_03"      
        android:text="@string/register_text"
        android:textColor="@color/white"       
        android:gravity="center"
        android:textSize="28.0sp" 
	    />
	<ImageView
	    android:id="@+id/photo"
	    android:layout_width="match_parent"
        android:layout_height="48dp"        
        android:layout_below="@id/title"  
        android:layout_marginTop="38dp"
        android:text="@string/phone_verify"
        android:textColor="@color/green_03"       
        android:gravity="center"
        android:textSize="24.0sp" 
	    />
	
	 <LinearLayout 
	     android:id="@+id/register_name_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/photo"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/name"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_name"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_name"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>

  	 <LinearLayout
  	     android:id="@+id/register_gender_layout"
  	     android:layout_width="fill_parent"
  	     android:layout_height="28dp"
  	     android:layout_below="@id/register_name_layout"
  	     android:layout_marginLeft="34dp"
  	     android:layout_marginRight="34dp"
  	     android:layout_marginTop="8dp"
  	     android:orientation="horizontal" >

  	     <TextView
  	         android:id="@+id/gender"
  	         android:layout_width="wrap_content"
  	         android:layout_height="wrap_content"
  	         android:layout_marginTop="5dp"
  	         android:text="@string/gender"
  	         android:textColor="@color/green_03"
  	         android:textSize="14.0sp" />
  	     <!-- 定义一组单选按钮 -->
  	    <RadioGroup
		    android:id="@+id/select_gender"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"	   
		    android:layout_marginLeft="16dp"
		    android:orientation="horizontal" >

	    <RadioButton
	        android:id="@+id/male"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:button="@drawable/radio"
	        android:checked="true"
	        android:text="@string/gender_male"
	        android:textColor="@color/green_03"
	        android:textSize="14sp" />

	    <RadioButton
	        android:id="@+id/female"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="40dp"
	        android:button="@drawable/radio"
	        android:checked="true"
	        android:text="@string/gender_female"
	        android:textColor="@color/green_03"
	        android:textSize="14sp" />
	</RadioGroup>
  	 </LinearLayout>

   	 <LinearLayout 
	     android:id="@+id/register_age_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_gender_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/age"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_age"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_age"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="number"
          android:maxLength="2"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
  		 <LinearLayout 
	     android:id="@+id/register_hometown_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_age_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/hometown"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_hometown"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_hometown"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
  		 <LinearLayout 
	     android:id="@+id/register_height_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_hometown_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/height"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_height"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_height"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
  		 <LinearLayout 
	     android:id="@+id/register_weight_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_height_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/weight"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_weight"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_weight"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
  	 <LinearLayout 
	     android:id="@+id/register_school_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_weight_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="6dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/school"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_school"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_shool"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
  		 <LinearLayout 
	     android:id="@+id/register_company_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_school_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="6dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/company"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_company"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_company"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
  		 <LinearLayout 
	     android:id="@+id/register_nation_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/register_company_layout"
      	 android:layout_marginTop="8dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">         
        <TextView
	    android:id="@+id/nation"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/register_nation"
        android:textColor="@color/green_03"
        android:textSize="14.0sp" 
	    />
       <EditText
          android:id="@+id/input_nation"           
          android:layout_width="fill_parent"
          android:layout_height="24.0dip"      
          android:background="@color/white"        
          android:inputType="text"
          android:maxLength="10"
          android:maxLines="1"
          android:layout_marginLeft="16dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
	<LinearLayout
   	 	android:id="@+id/register_finish_layout"
	    android:layout_width="match_parent"
        android:layout_height="58dp"        
        android:background="@color/green_02"      
       	android:layout_alignParentBottom="true"     	
      	
         android:orientation="vertical">
       <Button
        android:id="@+id/register_finish_btn"
        android:layout_width="fill_parent"
        android:layout_height="35dp"             
        android:layout_marginLeft="35.0dip"
        android:layout_marginRight="35.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@color/green_03"
        android:gravity="center"
        android:paddingTop="5.0dip"
        android:text="@string/register_finish"
        android:textColor="@color/white"
        android:textSize="20.0sp" />       
    </LinearLayout>



</RelativeLayout>
