<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginpage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0FFF0"
    android:orientation="vertical">
    
	<TextView
	    android:id="@+id/title"
	    android:layout_width="match_parent"
        android:layout_height="48dp"        
        android:background="@color/green_03"      
        android:text="@string/register_text"
        android:textColor="@color/white"       
        android:gravity="center"
        android:textSize="28.0sp" 
	    />
	<TextView
	    android:id="@+id/verify"
	    android:layout_width="match_parent"
        android:layout_height="48dp"        
        android:layout_below="@id/title"  
        android:layout_marginTop="48dp"
        android:text="@string/phone_verify"
        android:textColor="@color/green_03"       
        android:gravity="center"
        android:textSize="24.0sp" 
	    />
	 <LinearLayout 
	     android:id="@+id/input_mdn_layout"
	     android:layout_width="fill_parent"  
         android:layout_height="wrap_content"
         android:layout_below="@id/verify"
      	 android:layout_marginTop="28dp"
      	 android:layout_marginLeft="34dp"
      	 android:layout_marginRight="34dp"
         android:orientation="horizontal">
         
        <TextView
	    android:id="@+id/mdn"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"              
        android:text="@string/mdn"
        android:textColor="@color/green_03"
        android:textSize="16.0sp" 
	    />
       <EditText
          android:id="@+id/input_mdn"           
          android:layout_width="fill_parent"
          android:layout_height="36.0dip"      
          android:background="@color/white"        
          android:inputType="number"
          android:maxLength="11"
          android:maxLines="1"
          android:layout_marginLeft="8dp"          
          android:paddingLeft="12.0dip"
          android:textColor="#ff000000"
          android:textSize="14.0sp" />
  	</LinearLayout>
   	
	<LinearLayout
   	 	android:id="@+id/verify_layout"
	    android:layout_width="match_parent"
        android:layout_height="58dp"        
        android:background="@color/green_02"      
       	android:layout_alignParentBottom="true"     	
      	
         android:orientation="vertical">
       <Button
        android:id="@+id/verify_btn"
        android:layout_width="fill_parent"
        android:layout_height="38dp"             
        android:layout_marginLeft="35.0dip"
        android:layout_marginRight="35.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@color/green_03"
        android:gravity="center"
        android:paddingTop="5.0dip"
        android:text="@string/receive_verify_num"
        android:textColor="@color/white"
        android:textSize="20.0sp" />
       
    </LinearLayout>
    


</RelativeLayout>